--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 				</button>
 			</div>
 			<div class="weather">
-				<h2 class="city">Weather in Glen Head</h2>
-				<h1 class="temp">79°F</h1>
+				<h2 class="city"></h2>
+				<h1 class="temp"></h1>
 				<img src="" alt="" class="icon" />
-				<div class="description">Sunny</div>
-				<div class="humidity">Humitidy: 60%</div>
-				<div class="wind">Wind Speed: 4.1 MPH</div>
+				<div class="description"></div>
+				<div class="humidity"></div>
+				<div class="wind"></div>
 			</div>
 		</div>
 		<script src="script.js"></script>
