--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
 			<div class="weather">
 				<h2 class="city"></h2>
 				<h1 class="temp"></h1>
-				<img src="" alt="" class="icon" />
-				<div class="description"></div>
+				<div class="flex">
+					<img src="" alt="" class="icon" />
+					<div class="description"></div>
+				</div>
 				<div class="humidity"></div>
 				<div class="wind"></div>
 			</div>
